kubernetes/infrastructure/monitoring/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.pxldi.de`)
      middlewares:
        - name: internal-only
          namespace: traefik
        - name: authentik-forward-auth
          namespace: traefik
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
